class Aluno:

    def __init__(self, matricula):
        self._matricula = matricula
