class Curso:
    def __init__(self, nome, carga_horaria, preco):
        self.nome = nome
        self.carga_horaria = carga_horaria
        self.preco = preco
