class Livro:
    def __init__(self, titulo, autor):
        self.titulo = titulo
        self.autor = autor
