class Pessoa:

    def __init__(self, nome, cpf):
        self._nome = nome
        self._cpf = cpf